# rag-risk-analysis-service

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/routes/: health.py  ingest.py  query.py
app/core/: auth.py  config.py  db.py
app/schemas/: ingest.py  query.py
app/services/: embedder.py  generator.py  ingester.py  retriever.py
tests/: conftest.py  test_ingest.py  test_query.py
